Added report generation and database docs to python page

--- a/_posts/tutorials/2015-06-30-apachespark.html
+++ b/_posts/tutorials/2015-06-30-apachespark.html
@@ -1,12 +1,15 @@
 ---
-permalink: /ipython-notebooks/apache-spark
+permalink: python/apache-spark
 description: A tutorial showing how to plot Apache Spark DataFrames with Plotly
 name: Plotting Spark DataFrames with Plotly
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_13_apache_spark_1.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: databases
 language: python
+order: 3
+redirect_from: /ipython-notebooks/apache-spark/
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
