--- a/_posts/tutorials/2015-06-30-redshift.html
+++ b/_posts/tutorials/2015-06-30-redshift.html
@@ -1,12 +1,15 @@
 ---
-permalink: /ipython-notebooks/amazon-redshift
+permalink: python/amazon-redshift
 description: A tutorial showing how to plot Amazon AWS Redshift data with Plotly
 name: Plotting Data From Your Redshift Data Warehouse
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_9_redshift.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: databases
 language: python
+order: 2
+redirect_from: /ipython-notebooks/amazon-redshift/
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
