--- a/_posts/tutorials/2015-06-30-sqlite.html
+++ b/_posts/tutorials/2015-06-30-sqlite.html
@@ -1,12 +1,15 @@
 ---
-permalink: /ipython-notebooks/big-data-analytics-with-pandas-and-sqlite
+permalink: python/big-data-analytics-with-pandas-and-sqlite
 description: A primer on out-of-memory analytics of large datasets with Pandas, SQLite, and IPython notebooks.
 name: Big data analytics with Pandas and SQLite
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_14_sqlite_1.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: databases
 language: python
+order: 4
+redirect_from: /ipython-notebooks/big-data-analytics-with-pandas-and-sqlite/
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
