--- a/_posts/user_guide_python/2015-06-30-email-reports.html
+++ b/_posts/user_guide_python/2015-06-30-email-reports.html
@@ -1,11 +1,13 @@
 ---
-permalink: /python/email-reports
+permalink: python/email-reports
 description: How to email Plotly graphs in HTML reports with Python.
 name: Emailing Plotly Graphs with Python
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_10_email_report.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: report_generation
+order: 3
 language: python
 ---
 {% raw %}<script type="text/javascript"         src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
