--- a/_posts/user_guide_python/2015-06-30-html-reports.html
+++ b/_posts/user_guide_python/2015-06-30-html-reports.html
@@ -1,11 +1,13 @@
 ---
-permalink: /python/html-reports
+permalink: python/html-reports/
 description: How to make HTML reports with Python, Pandas, and Plotly Graphs.
 name: Python HTML Reports
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_10_html_report.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: report_generation
+order: 1
 language: python
 ---
 {% raw %}
