--- a/_posts/user_guide_python/2015-06-30-mysql-ipython-notebook.html
+++ b/_posts/user_guide_python/2015-06-30-mysql-ipython-notebook.html
@@ -1,12 +1,14 @@
 ---
-permalink: /python/graph-data-from-mysql-database-in-python
+permalink: python/graph-data-from-mysql-database-in-python
 description: How to graph data from a MySQL database with Python.
 name: Graph data from a MySQL database with Python
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_25_graph_sql_1.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: databases
 language: python
+order: 1
 ---
 {% raw %}<script type="text/javascript"         src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <div class="cell border-box-sizing text_cell rendered">
