--- a/_posts/user_guide_python/2015-06-30-pdf-reports.html
+++ b/_posts/user_guide_python/2015-06-30-pdf-reports.html
@@ -1,11 +1,13 @@
 ---
-permalink: /python/pdf-reports
+permalink: python/pdf-reports/
 description: How to make PDF reports with Python and Plotly Graphs.
 name: Python PDF Reports
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_10_pdf_report.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: report_generation
+order: 1
 language: python
 ---
 {% raw %}
