--- a/_posts/user_guide_python/2015-06-30-xlwings.html
+++ b/_posts/user_guide_python/2015-06-30-xlwings.html
@@ -1,12 +1,15 @@
 ---
-permalink: /ipython-notebooks/xlwings
+permalink: python/xlwings/
 description: Online Dashboards with Excel, Python, & Plotly
 name: Building Interactive Graphs Using Plotly and xlwings
-has_thumbnail: false
-thumbnail: /images/static-image
+has_thumbnail: true
+thumbnail: thumbnail/ipython_xlwings_report.jpg
 layout: user-guide
-page_type: u-guide
+page_type: example_index
+display_as: report_generation
+order: 4
 language: python
+redirect_from: /ipython-notebooks/xlwings/
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
