Minor fix in salesforce example

--- a/_posts/tutorials/2015-06-30-salesforce.html
+++ b/_posts/tutorials/2015-06-30-salesforce.html
@@ -1,5 +1,5 @@
 ---
-permalink: /python/salesforce
+permalink: python/salesforce
 description: Create interactive graphs with salesforce, IPython Notebook and plotly
 name: Interactive graphing with Salesforce
 has_thumbnail: true
