Added missing headers in database docs

--- a/_posts/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/2015-05-25-ipython-notebooks_index.html
@@ -6,6 +6,7 @@ description: Get started with IPython notebooks and Plotly for inline interactiv
 layout: getstart
 language: python
 has_thumbnail: false
+redirect_from: /python/ipython-notebooks/
 ---
 
 <h1>Plotly for IPython Notebooks</h1>
