--- a/_posts/tutorials/2015-06-30-apachespark.html
+++ b/_posts/tutorials/2015-06-30-apachespark.html
@@ -17,6 +17,11 @@ redirect_from: /ipython-notebooks/apache-spark/
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Plot-Spark-Dataframes-in-python-with-plotly">Plot Spark Dataframes in Python with Plotly<a class="anchor-link" href="#Plot-Spark-Dataframes-in-python-with-plotly">&#182;</a></h1>
+</div>
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p><a href="https://spark.apache.org/">Apache Spark</a>'s meteoric rise has been incredible. It is one of the fastest growing open source projects and is a perfect fit for the graphing tools that <a href="https://plot.ly/">Plotly</a> provides. Plotly's ability to graph and share images from <a href="https://spark.apache.org/docs/latest/sql-programming-guide.html">Spark DataFrames</a> quickly and easily make it a great tool for any data scientist and <a href="https://plot.ly/product/enterprise/">Plotly Enterprise</a> make it easy to securely host and share those Plotly graphs.</p>
 <p>This notebook will go over the details of getting set up with IPython Notebooks for graphing Spark data with Plotly.</p>
 <hr>
