--- a/_posts/tutorials/2015-06-30-redshift.html
+++ b/_posts/tutorials/2015-06-30-redshift.html
@@ -17,6 +17,11 @@ redirect_from: /ipython-notebooks/amazon-redshift/
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Plot-Data-from-Redshift-Warehouse">Plot Data from Redshift Warehouse using Python and Plotly<a class="anchor-link" href="#Plot-Data-from-Redshift-Warehouse">&#182;</a></h1>
+</div>
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>This notebook will go over one of the easiest ways to graph data from your <a href="http://aws.amazon.com/redshift/">Amazon Redshift data warehouse</a> using <a href="https://plot.ly/">Plotly's public platform</a> for publishing beautiful, interactive graphs from Python to the web.</p>
 <p><a href="https://plot.ly/product/enterprise/">Plotly's Enterprise platform</a> allows for an easy way for your company to build and share graphs without the data leaving your servers.</p>
 
@@ -139,10 +144,10 @@ redirect_from: /ipython-notebooks/amazon-redshift/
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">psycopg2</span>
 <span class="n">conn</span> <span class="o">=</span> <span class="n">psycopg2</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s">&quot;datawarehouse.cm4z2iunjfsc.us-west-2.redshift.amazonaws.com&quot;</span><span class="p">,</span> 
-    <span class="n">user</span><span class="o">=</span><span class="n">redshift_user</span><span class="p">,</span> 
-    <span class="n">port</span><span class="o">=</span><span class="n">port</span><span class="p">,</span> 
-    <span class="n">password</span><span class="o">=</span><span class="n">redshift_pass</span><span class="p">,</span> 
+    <span class="n">host</span><span class="o">=</span><span class="s">&quot;datawarehouse.cm4z2iunjfsc.us-west-2.redshift.amazonaws.com&quot;</span><span class="p">,</span>
+    <span class="n">user</span><span class="o">=</span><span class="n">redshift_user</span><span class="p">,</span>
+    <span class="n">port</span><span class="o">=</span><span class="n">port</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="n">redshift_pass</span><span class="p">,</span>
     <span class="n">dbname</span><span class="o">=</span><span class="n">dbname</span><span class="p">)</span>
 <span class="n">cur</span> <span class="o">=</span> <span class="n">conn</span><span class="o">.</span><span class="n">cursor</span><span class="p">()</span> <span class="c"># create a cursor for executing queries</span>
 </pre></div>
@@ -329,7 +334,7 @@ redirect_from: /ipython-notebooks/amazon-redshift/
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="k">for</span> <span class="n">table</span> <span class="ow">in</span> <span class="n">tables</span> <span class="o">+</span> <span class="p">[</span><span class="s">&quot;sales&quot;</span><span class="p">]:</span>
-    <span class="n">cur</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&quot;select count(*) from </span><span class="si">%s</span><span class="s">;&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">table</span><span class="p">,))</span>    
+    <span class="n">cur</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span><span class="s">&quot;select count(*) from </span><span class="si">%s</span><span class="s">;&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">table</span><span class="p">,))</span>
     <span class="k">print</span><span class="p">(</span><span class="n">cur</span><span class="o">.</span><span class="n">fetchone</span><span class="p">())</span>
 <span class="n">conn</span><span class="o">.</span><span class="n">commit</span><span class="p">()</span> <span class="c"># make sure data went through and commit our statements permanently.</span>
 </pre></div>
@@ -457,14 +462,14 @@ redirect_from: /ipython-notebooks/amazon-redshift/
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">layout</span> <span class="o">=</span> <span class="n">Layout</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="s">&quot;Declared User Preference Box Plots&quot;</span><span class="p">,</span> 
+<div class=" highlight hl-ipython2"><pre><span class="n">layout</span> <span class="o">=</span> <span class="n">Layout</span><span class="p">(</span><span class="n">title</span><span class="o">=</span><span class="s">&quot;Declared User Preference Box Plots&quot;</span><span class="p">,</span>
                 <span class="n">yaxis</span><span class="o">=</span><span class="n">YAxis</span><span class="p">())</span>
 
 <span class="n">data</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="k">for</span> <span class="n">pref</span> <span class="ow">in</span> <span class="n">df</span><span class="o">.</span><span class="n">drop</span><span class="p">(</span><span class="s">&#39;state&#39;</span><span class="p">,</span> <span class="n">axis</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span><span class="o">.</span><span class="n">columns</span><span class="p">:</span>
     <span class="c"># for every preference type, make a box plot</span>
-    <span class="n">data</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Box</span><span class="p">(</span><span class="n">y</span><span class="o">=</span><span class="n">df</span><span class="p">[</span><span class="n">pref</span><span class="p">],</span> <span class="n">name</span><span class="o">=</span><span class="n">pref</span><span class="p">))</span> 
-    
+    <span class="n">data</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Box</span><span class="p">(</span><span class="n">y</span><span class="o">=</span><span class="n">df</span><span class="p">[</span><span class="n">pref</span><span class="p">],</span> <span class="n">name</span><span class="o">=</span><span class="n">pref</span><span class="p">))</span>
+
 <span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">Figure</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">data</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">),</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;redshift/user preference box plots&#39;</span><span class="p">)</span>
 </pre></div>
 
