Added theme examples

--- a/_posts/ggplot2/Aesthetics/2016-01-27-aes_index.html
+++ b/_posts/ggplot2/Aesthetics/2016-01-27-aes_index.html
@@ -2,7 +2,7 @@
 title: ggplot2 aes | Examples | Plotly
 name: aes
 permalink: ggplot2/aes/
-description: How assign aesthetics in ggplot2 and R.
+description: How assign aesthetics in ggplot2 and R
 layout: base
 thumbnail: thumbnail/aesthetics_image.png
 language: ggplot2
