Fixed formatting issues

--- a/_posts/tutorials/2015-06-30-redshift.html
+++ b/_posts/tutorials/2015-06-30-redshift.html
@@ -17,11 +17,8 @@ redirect_from: /ipython-notebooks/amazon-redshift/
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Plot-Data-from-Redshift-Warehouse">Plot Data from Redshift Warehouse using Python and Plotly<a class="anchor-link" href="#Plot-Data-from-Redshift-Warehouse">&#182;</a></h1>
-</div>
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
+  <h1>Plotting data from Amazon's Redshift</h1>
+  <br />
 <p>This notebook will go over one of the easiest ways to graph data from your <a href="http://aws.amazon.com/redshift/">Amazon Redshift data warehouse</a> using <a href="https://plot.ly/">Plotly's public platform</a> for publishing beautiful, interactive graphs from Python to the web.</p>
 <p><a href="https://plot.ly/product/enterprise/">Plotly's Enterprise platform</a> allows for an easy way for your company to build and share graphs without the data leaving your servers.</p>
 
