Added new theme an box_plot examples

--- a/_posts/ggplot2/Theme/axis.title/2016-01-27-Themes_axistitles_index.html
+++ b/_posts/ggplot2/Theme/axis.title/2016-01-27-Themes_axistitles_index.html
@@ -1,8 +1,8 @@
 ---
 title: ggplot2 theme | Examples | Plotly
-name: theme
-permalink: ggplot2/theme/
-description: How modify axis labels and titles in R and ggplot2
+name: axis.title
+permalink: ggplot2/axis_title/
+description: How to modify axis titles in R and ggplot2
 layout: base
 thumbnail: thumbnail/theme_image.png
 language: ggplot2
@@ -10,5 +10,5 @@ page_type: example_index
 has_thumbnail: true
 display_as: theme
 ---
-{% assign examples = site.posts | where:"language","ggplot2" | where:"suite","theme" | sort: "order" %}
+{% assign examples = site.posts | where:"language","ggplot2" | where:"suite","axis.title" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
