--- a/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels.html
+++ b/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels.html
@@ -3,7 +3,7 @@ name: <code>labs</code>
 plot_url: https://plot.ly/~riddhiman/164/diamonds/
 arrangement: horizontal
 language: ggplot2
-suite: theme
+suite: axis.title
 description: Inspired by <a href="http://docs.ggplot2.org/current/">ggplot2 documentation</a>.
 order: 1
 sitemap: false
