--- a/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels -color.html
+++ b/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels -color.html
@@ -1,11 +1,11 @@
 ---
-name: <code>size</code>
-plot_url: https://plot.ly/~riddhiman/166/diamonds/
+name: <code>colour</code>
+plot_url: https://plot.ly/~riddhiman/168/diamonds/
 arrangement: horizontal
 language: ggplot2
-suite: theme
+suite: axis.title
 description: Inspired by <a href="http://docs.ggplot2.org/current/">ggplot2 documentation</a>.
-order: 2
+order: 3
 sitemap: false
 ---
 library(plotly)
@@ -16,9 +16,8 @@ df <- diamonds[sample(1:nrow(diamonds), size = 1000),]
 p <- ggplot(df, aes(carat, price)) +
   geom_point() + 
   labs(title = "Diamonds", x = "x-axis -> Carat", y = "y-axis -> Price") +
-  theme(plot.title = element_text(size = 50),  # Changes size of title
-        axis.title.x = element_text(size = 20),  # Changes size of xaxis title
-        axis.title.y = element_text(size = 20))  # Changes size of yaxis title
-
+  theme(plot.title = element_text(size = 50, colour = "blue"),  
+        axis.title.x = element_text(size = 20, colour = "red"),  
+        axis.title.y = element_text(size = 20, colour = "green"))  
 p
 ggplotly()
