--- a/_posts/plotly_js/ajax-call/2015-08-12-plotting-csv-data-from-ajax.html
+++ b/_posts/plotly_js/ajax-call/2015-08-12-plotting-csv-data-from-ajax.html
@@ -7,10 +7,10 @@ order: 1
 sitemap: false
 arrangement: horizontal
 ---
-$(document).ready(function() {
-   d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/2014_apple_stock.csv", function(data){ processData(data) } );
+function makeplot() {
+  Plotly.d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/2014_apple_stock.csv", function(data){ processData(data) } );
 
-});
+};
 
 function processData(allRows) {
 
@@ -24,7 +24,7 @@ function processData(allRows) {
   }
   console.log( 'X',x, 'Y',y, 'SD',standard_deviation );
   makePlotly( x, y, standard_deviation );
-};
+}
 
 function makePlotly( x, y, standard_deviation ){
   var plotDiv = document.getElementById("plot");
@@ -33,6 +33,7 @@ function makePlotly( x, y, standard_deviation ){
     y: y
   }];
 
-  Plotly.newPlot('DivId', traces,
+  Plotly.newPlot('myDiv', traces,
     {title: 'Plotting CSV data from AJAX call'});
 };
+  makeplot();
