Added some matplotlib examples.

--- a/_posts/matplotlib/bar/2015-09-11-dictionary.html
+++ b/_posts/matplotlib/bar/2015-09-11-dictionary.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~MattSundquist/20145
 arrangement: horizontal
 language: matplotlib
 suite: bar
+order: 2
 description: Inspired by <a href="http://stackoverflow.com/questions/16010869/python-plot-a-bar-using-matplotlib-using-a-dictionary/16014873#16014873">Stack Overflow</a>.
 sitemap: false
 ---
