--- a/_posts/matplotlib/bar/2015-09-11-log.html
+++ b/_posts/matplotlib/bar/2015-09-11-log.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~MattSundquist/19281/
 arrangement: horizontal
 language: matplotlib
 suite: bar
+order: 5
 description: Inspired by <a href="http://matplotlib.org/examples/pylab_examples/log_bar.html">matplotlib docs</a>.
 sitemap: false
 ---
