--- a/_posts/matplotlib/bar/2015-09-11-mpl-dates.html
+++ b/_posts/matplotlib/bar/2015-09-11-mpl-dates.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~MattSundquist/20128
 arrangement: horizontal
 language: matplotlib
 suite: bar
+order: 6
 description: Inspired by <a href="http://stackoverflow.com/questions/5902371/matplotlib-bar-chart-with-dates?lq=1">Stack Overflow</a>.
 sitemap: false
 ---
