--- a/_posts/matplotlib/bar/2015-09-11-multiple-bars.html
+++ b/_posts/matplotlib/bar/2015-09-11-multiple-bars.html
@@ -4,6 +4,7 @@ plot_url: https://plot.ly/~MattSundquist/20157
 arrangement: horizontal
 language: matplotlib
 suite: bar
+order: 7
 description: Inspired by <a href="http://stackoverflow.com/questions/14270391/python-matplotlib-multiple-bars">Stack Overflow</a>.
 sitemap: false
 ---
