--- a/_posts/matplotlib/bar/2015-04-09-bar_matplotlib_index.html
+++ b/_posts/matplotlib/bar/2015-04-09-bar_matplotlib_index.html
@@ -2,7 +2,7 @@
 title: matplotlib Bar Charts | Examples | Plotly
 name: Bar Charts
 permalink: matplotlib/bar-charts/
-description: How to make a bar chart in matplotlib. Seven examples of grouped, stacked, overlaid, and colored bar charts.
+description: How to make a bar chart in matplotlib. Examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: thumbnail/bar.jpg
 language: matplotlib
