--- a/_posts/python/plot-csv/2015-02-09-plotting-csv-data.html
+++ b/_posts/python/plot-csv/2015-02-09-plotting-csv-data.html
@@ -19,7 +19,7 @@ order: 1
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Plotting-from-csv-Data">Plotting from csv Data<a class="anchor-link" href="#Plotting-from-csv-Data">&#182;</a></h1><p>CSV or comma-delimited-values is a very popular format for storing structured data. In this tutorial, we will see how to plot beautiful graphs using csv data, and Pandas.</p>
+<h1 id="Plotting-from-csv-Data">Plotting from CSV Data<a class="anchor-link" href="#Plotting-from-csv-Data">&#182;</a></h1><p>CSV or comma-delimited-values is a very popular format for storing structured data. In this tutorial, we will see how to plot beautiful graphs using csv data, and Pandas.</p>
 
 </div>
 </div>
@@ -45,7 +45,7 @@ order: 1
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="A-Simple-Example">A Simple Example<a class="anchor-link" href="#A-Simple-Example">&#182;</a></h3><p>We will import data from a local file <code>sample-data.csv</code>. The file is available <a href="">here</a></p>
+<h3 id="A-Simple-Example">A Simple Example<a class="anchor-link" href="#A-Simple-Example">&#182;</a></h3><p>We will import data from a local file <code>sample-data.csv</code>. The file is present in the same directory as this IPython notebook. This notebook, and the associated data is available <a href="https://github.com/plotly/documentation/tree/source/_posts/python/plot-csv" target="_blank">here</a></p>
 
 </div>
 </div>
@@ -175,7 +175,7 @@ order: 1
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Plotting-data-from-external-source">Plotting data from external source<a class="anchor-link" href="#Plotting-data-from-external-source">&#182;</a></h2><p>In the next example, we will learn how to import csv data from an external source, and plot it using Plotly and pandas. We are going to use this data for the example.</p>
+<h2 id="Plotting-data-from-external-source">Plotting Data From an External Source<a class="anchor-link" href="#Plotting-data-from-external-source">&#182;</a></h2><p>In the next example, we will learn how to import csv data from an external source, and plot it using Plotly and pandas. We are going to use this data for the example.</p>
 
 </div>
 </div>
@@ -289,5 +289,9 @@ order: 1
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~tarzzz/1216.embed" height="525px" width="100%"></iframe>
+</div>
+</div>
+</div>
+</div>
 </div>
 {% endraw %}
