--- a/_posts/python/plot-csv/2015-06-30-plotting-csv-data.html
+++ b/_posts/python/plot-csv/2015-06-30-plotting-csv-data.html
@@ -1,7 +1,7 @@
 ---
-permalink: python/plot-data-from-csv/
-description: Plot data from csv source
-title: Plotting Data from csv | plotly
+permalink: python/plot-data-from-csv
+description: How to create charts from csv files with Plotly and Python
+title: Plot data from csv source | plotly
 has_thumbnail: true
 thumbnail: thumbnail/csv.jpg
 layout: user-guide
@@ -13,13 +13,12 @@ page_type: example_index
 order: 1
 ---
 {% raw %}
-
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Plotting-from-csv-Data">Plotting from CSV Data<a class="anchor-link" href="#Plotting-from-csv-Data">&#182;</a></h1><p>CSV or comma-delimited-values is a very popular format for storing structured data. In this tutorial, we will see how to plot beautiful graphs using csv data, and Pandas.</p>
+<h1 id="Plotting-from-csv-Data">Plotting from csv Data<a class="anchor-link" href="#Plotting-from-csv-Data">&#182;</a></h1><p>CSV or comma-delimited-values is a very popular format for storing structured data. In this tutorial, we will see how to plot beautiful graphs using csv data, and Pandas.</p>
 
 </div>
 </div>
@@ -45,7 +44,7 @@ order: 1
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="A-Simple-Example">A Simple Example<a class="anchor-link" href="#A-Simple-Example">&#182;</a></h3><p>We will import data from a local file <code>sample-data.csv</code>. The file is present in the same directory as this IPython notebook. This notebook, and the associated data is available <a href="https://github.com/plotly/documentation/tree/source/_posts/python/plot-csv" target="_blank">here</a></p>
+<h3 id="A-Simple-Example">A Simple Example<a class="anchor-link" href="#A-Simple-Example">&#182;</a></h3><p>We will import data from a local file <code>sample-data.csv</code>. The file is available <a href="">here</a></p>
 
 </div>
 </div>
@@ -175,7 +174,7 @@ order: 1
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Plotting-data-from-external-source">Plotting Data From an External Source<a class="anchor-link" href="#Plotting-data-from-external-source">&#182;</a></h2><p>In the next example, we will learn how to import csv data from an external source, and plot it using Plotly and pandas. We are going to use this data for the example.</p>
+<h2 id="Plotting-data-from-external-source">Plotting data from external source<a class="anchor-link" href="#Plotting-data-from-external-source">&#182;</a></h2><p>In the next example, we will learn how to import csv data from an external source (a url), and plot it using Plotly and pandas. We are going to use this data for the example.</p>
 
 </div>
 </div>
@@ -269,7 +268,7 @@ order: 1
                   <span class="p">)</span>
 <span class="n">layout</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Layout</span><span class="p">(</span>
                   <span class="n">title</span><span class="o">=</span><span class="s">&#39;Apple Share Prices over time (2014)&#39;</span><span class="p">,</span>
-                  <span class="n">plot_bgcolor</span><span class="o">=</span><span class="s">&#39;rgb(230, 230,230)&#39;</span><span class="p">,</span>
+                  <span class="n">plot_bgcolor</span><span class="o">=</span><span class="s">&#39;rgb(230, 230,230)&#39;</span><span class="p">,</span> 
                   <span class="n">showlegend</span><span class="o">=</span><span class="bp">True</span>
                   <span class="p">)</span>
 <span class="n">fig</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Figure</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="p">[</span><span class="n">trace</span><span class="p">],</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
@@ -290,8 +289,10 @@ order: 1
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~tarzzz/1216.embed" height="525px" width="100%"></iframe>
 </div>
+
+</div>
+
 </div>
 </div>
-</div>
-</div>
-{% endraw %}
+
+</div>{% endraw %}
