Fixed broken link due to jekyll upgrade

--- a/_posts/tutorials/2015-06-30-grid-api.html
+++ b/_posts/tutorials/2015-06-30-grid-api.html
@@ -1,5 +1,5 @@
 ---
-permalink: /python/data-api
+permalink: python/data-api/
 description: How to upload data to Plotly from Python with the Plotly Grid API.
 name: Upload Data to Plotly from Python
 has_thumbnail: false
