Updates to examples
Made some cosmetic changes to all previous posts like color, size and
labels

--- a/_posts/ggplot2/Geoms/geom_bar/2015-07-21-bar-percentages.html
+++ b/_posts/ggplot2/Geoms/geom_bar/2015-07-21-bar-percentages.html
@@ -19,5 +19,4 @@ p <- ggplot(df, aes(x = color)) +
   ylab("Percent") + 
   ggtitle("Show precentages in bar chart")
   
-p
-ggplotly()
+ggplotly(p)
