--- a/_posts/ggplot2/Theme/axis.text/2016-01-27-axis-text-blank.html
+++ b/_posts/ggplot2/Theme/axis.text/2016-01-27-axis-text-blank.html
@@ -1,6 +1,6 @@
 ---
 name: <code>blank</code>
-plot_url: https://plot.ly/~riddhiman/172/price-vs-carat/
+plot_url: https://plot.ly/~riddhiman/202/price-vs-carat/
 arrangement: horizontal
 language: ggplot2
 suite: axis.text
@@ -13,9 +13,8 @@ set.seed(123)
 
 df <- diamonds[sample(1:nrow(diamonds), size = 1000),]
 
-p <- ggplot(df, aes(carat, price)) + 
+p <- ggplot(df, aes(carat, price, color = cut)) + 
   geom_point() + 
   theme(axis.text = element_blank())
 
-p
-ggplotly()
+ggplotly(p)
