--- a/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels.html
+++ b/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels.html
@@ -17,8 +17,8 @@ df <- diamonds[sample(1:nrow(diamonds), size = 1000),]
 p <- ggplot(df, aes(carat, price)) + 
   geom_point() + 
   labs(title = "Diamonds", x = "x-axis -> Carat", y = "y-axis -> Price")
-p
-ggplotly()
+
+ggplotly(p)
 
 # Alternatively use
 p <- ggplot(df, aes(carat, price)) + 
@@ -27,5 +27,4 @@ p <- ggplot(df, aes(carat, price)) +
   xlab("x-axis -> Carat") + 
   ylab("y-axis -> Price")
 
-p
-ggplotly()
+ggplotly(p)
