--- a/_posts/ggplot2/Geoms/geom_bar/2015-07-21-bar-colors.html
+++ b/_posts/ggplot2/Geoms/geom_bar/2015-07-21-bar-colors.html
@@ -20,5 +20,4 @@ p <- ggplot(df, aes(x = color)) +
   ylab("Count") + 
   ggtitle("Specify manual colors in a bar chart")
   
-p
-ggplotly()
+ggplotly(p)
