--- a/_posts/ggplot2/Geoms/geom_bar/2015-07-21-variable-comparison.html
+++ b/_posts/ggplot2/Geoms/geom_bar/2015-07-21-variable-comparison.html
@@ -19,7 +19,7 @@ DF <- read.table(text="Rank F1     F2     F3
 library(reshape2)
 DF1 <- melt(DF, id.var="Rank")
 
-ggplot(DF1, aes(x = Rank, y = value, fill = variable)) +
+p <- ggplot(DF1, aes(x = Rank, y = value, fill = variable)) +
   geom_bar(stat = "identity")
 
-ggplotly()
+ggplotly(p)
