--- a/_posts/ggplot2/Geoms/geom_boxplot/2015-07-28-geom_boxplot-ignore_outliers.html
+++ b/_posts/ggplot2/Geoms/geom_boxplot/2015-07-28-geom_boxplot-ignore_outliers.html
@@ -17,9 +17,7 @@ p <- ggplot(df, aes(cut, price, fill = cut)) +
   geom_boxplot(outlier.shape = NA) + 
   ggtitle("Ignore outliers in ggplot2")
 
-# To replicate what ggplot does, need to modify the plotly 
-# object to make sure outlier points have opacity = 0  
-
+# Need to modify the plotly object and make outlier points have opacity equal to 0
 p <- plotly_build(p)
 
 p$data <- lapply(p$data, FUN = function(x){
