--- a/_posts/ggplot2/Geoms/geom_boxplot/2015-07-28-geom_boxplot-whiskers.html
+++ b/_posts/ggplot2/Geoms/geom_boxplot/2015-07-28-geom_boxplot-whiskers.html
@@ -13,18 +13,15 @@ set.seed(123)
 
 df <- diamonds[sample(1:nrow(diamonds), size = 1000),]
 
-# This is how it needs to be done in ggplot2
+# This is how it needs to be done in ggplot
 p <- ggplot(df, aes(color, price)) +
   stat_boxplot(geom ='errorbar') + 
   geom_boxplot()+
   ggtitle("Add horizontal lines to whiskers using ggplot2")
-p
 
 # Note that plotly will automatically add horozontal lines to the whiskers
-# So, simply do the following
 p <- ggplot(df, aes(cut, price, fill = cut)) +
   geom_boxplot()+
   ggtitle("Add horizontal lines to whiskers using ggplot2")
-p
 
-ggplotly()
+ggplotly(p)
