--- a/_posts/ggplot2/Theme/axis.text/2016-01-27-axis-text-size.html
+++ b/_posts/ggplot2/Theme/axis.text/2016-01-27-axis-text-size.html
@@ -1,6 +1,6 @@
 ---
 name: <code>size</code>
-plot_url: https://plot.ly/~riddhiman/174/price-vs-carat/
+plot_url: https://plot.ly/~riddhiman/204/price-vs-carat/
 arrangement: horizontal
 language: ggplot2
 suite: axis.text
@@ -13,11 +13,9 @@ set.seed(123)
 
 df <- diamonds[sample(1:nrow(diamonds), size = 1000),]
 
-p <- ggplot(df, aes(carat, price)) + 
+p <- ggplot(df, aes(carat, price, color = color, alpha = cut)) + 
   geom_point() + 
-  theme(axis.text.x = element_text(colour = "blue", size = 20), 
-        axis.text.y = element_text(colour = "red", size = 40))
+  theme(axis.text.x = element_text(colour = "#ff6666", size = 20), 
+        axis.text.y = element_text(colour = "#668cff", size = 20))
   
-p
-ggplotly()
-
+ggplotly(p)
