--- a/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels -color.html
+++ b/_posts/ggplot2/Theme/axis.title/2016-01-27-axis-labels -color.html
@@ -1,6 +1,6 @@
 ---
 name: <code>colour</code>
-plot_url: https://plot.ly/~riddhiman/168/diamonds/
+plot_url: https://plot.ly/~riddhiman/206/diamonds/
 arrangement: horizontal
 language: ggplot2
 suite: axis.title
@@ -16,8 +16,8 @@ df <- diamonds[sample(1:nrow(diamonds), size = 1000),]
 p <- ggplot(df, aes(carat, price)) +
   geom_point() + 
   labs(title = "Diamonds", x = "x-axis -> Carat", y = "y-axis -> Price") +
-  theme(plot.title = element_text(size = 50, colour = "blue"),  
-        axis.title.x = element_text(size = 20, colour = "red"),  
-        axis.title.y = element_text(size = 20, colour = "green"))  
-p
-ggplotly()
+  theme(plot.title = element_text(size = 50, colour = "#668cff"),  
+        axis.title.x = element_text(size = 20, colour = "#6699ff"),  
+        axis.title.y = element_text(size = 20, colour = "#ff8080"))  
+
+ggplotly(p)
