Added stat_smooth example
Example to manually add legend items when using stat_smooth

--- a/_posts/ggplot2/Geoms/stat_smooth/2015-07-14-different-trend-lines.html
+++ b/_posts/ggplot2/Geoms/stat_smooth/2015-07-14-different-trend-lines.html
@@ -3,9 +3,9 @@ name: adding trend lines in R with <code>stat_smooth</code>
 plot_url: https://plot.ly/~MattSundquist/18370/y-vs-x/
 arrangement: horizontal
 language: ggplot2
-suite: smooth
+suite: stat
 description: Inspired by <a href="http://stackoverflow.com/questions/15102254/how-do-i-add-different-trend-lines-in-r">Stack Overflow</a>.
-order: 7
+order: 3
 sitemap: false
 ---
 library(plotly)
