--- a/_posts/plotly_js/ajax-call/2015-08-12-plotting-csv-data-from-ajax.html
+++ b/_posts/plotly_js/ajax-call/2015-08-12-plotting-csv-data-from-ajax.html
@@ -17,7 +17,7 @@ function processData(allRows) {
   console.log(allRows);
   var x = [], y = [], standard_deviation = [];
 
-  for (var i=0; i<allRows.length; i++) {
+  for (var i=0; i&lt;allRows.length; i++) {
     row = allRows[i];
     x.push( row['AAPL_x'] );
     y.push( row['AAPL_y'] );
