--- a/_posts/matplotlib/subplots/2015-04-09-mpl-simple-subplot.html
+++ b/_posts/matplotlib/subplots/2015-04-09-mpl-simple-subplot.html
@@ -1,32 +1,39 @@
 ---
 name: matplotlib's <code>subplot</code> command
-plot_url: https://plot.ly/~PlotBot/86
+plot_url: https://plot.ly/~tarzzz/1240
 arrangement: horizontal
 language: matplotlib
 suite: subplots
-order: 8
+order: 1
 sitemap: false
 ---
 import matplotlib.pyplot as plt
-from matplotlib import gridspec
+
 
 import plotly.plotly as py
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
-fig = plt.figure()
-gs = gridspec.GridSpec(3, 3)
-ax1 = fig.add_subplot(gs[0,:])
-ax1.plot([1,2,3,4,5], [10,5,10,5,10], 'r-')
-ax2 = fig.add_subplot(gs[1,:-1])
-ax2.plot([1,2,3,4], [1,4,9,16], 'k-')
-ax3 = fig.add_subplot(gs[1:, 2])
-ax3.plot([1,2,3,4], [1,10,100,1000], 'b-')
-ax4 = fig.add_subplot(gs[2,0])
-ax4.plot([1,2,3,4], [0,0,1,1], 'g-')
-ax5 = fig.add_subplot(gs[2,1])
-ax5.plot([1,2,3,4], [1,0,0,1], 'c-')
-gs.update(wspace=0.5, hspace=0.5)
+ig = plt.figure()
 
+ax1 = fig.add_subplot(221)
+ax1.plot([1,2,3,4,5], [10,5,10,5,10], 'r-')
+
+ax2 = fig.add_subplot(222)
+ax2.plot([1,2,3,4], [1,4,9,16], 'k-')
+
+ax3 = fig.add_subplot(223)
+ax3.plot([1,2,3,4], [1,10,100,1000], 'b-')
+
+ax4 = fig.add_subplot(224)
+ax4.plot([1,2,3,4], [0,0,1,1], 'g-')
+
+
+plt.tight_layout()
 fig = plt.gcf()
-plot_url = py.plot_mpl(fig, filename='mpl-simple-subplot')
+
+plotly_fig = tls.mpl_to_plotly( fig )
+plotly_fig['layout']['title'] = 'Simple Subplot Example Title'
+plotly_fig['layout']['margin'].update({'t':40})
+
+plot_url = py.plot(plotly_fig, filename='mpl-simple-subplot')
