--- a/_posts/matplotlib/line_exclusive/2015-08-15-color-example.html
+++ b/_posts/matplotlib/line_exclusive/2015-08-15-color-example.html
@@ -1,5 +1,5 @@
 ---
-name: example using colors
+name: example using Matplotlib Colormap
 plot_url: https://plot.ly/~MattSundquist/19334/-line0-line1-line2-line3-line4-line5-line6-line7-line8-line9-line10-line11-line1/
 arrangement: horizontal
 language: matplotlib
