--- a/_posts/pandas/line-plots/2016-02-11-4cufflinks-add-linestyle-and-colors.html
+++ b/_posts/pandas/line-plots/2016-02-11-4cufflinks-add-linestyle-and-colors.html
@@ -1,5 +1,5 @@
 ---
-name: SET LINE COLOR AND STYLE IN CUFFLINKS
+name: Set Line Color and Style in Cufflinks
 plot_url: https://plot.ly/~tarzzz/1261
 language: pandas
 suite: line-plots
