Time series, background related examples

--- a/_posts/matplotlib/axes/2016-02-08-axes-latex.html
+++ b/_posts/matplotlib/axes/2016-02-08-axes-latex.html
@@ -1,6 +1,6 @@
 ---
 name: Setting the <code>LaTeX</code> Axes Labels
-plot_url: https://plot.ly/~tarzzz/
+plot_url: https://plot.ly/~tarzzz/1265
 arrangement: horizontal
 language: matplotlib
 suite: axes
