--- a/_posts/matplotlib/bar/2016-02-08-bar-stacked.html
+++ b/_posts/matplotlib/bar/2016-02-08-bar-stacked.html
@@ -1,5 +1,5 @@
 ---
-name: Stacked Bar Chart
+name: Stacked Bar Chart with Labels
 plot_url: https://plot.ly/~tarzzz/1058
 arrangement: horizontal
 language: matplotlib
