--- a/_posts/matplotlib/box/2016-02-08-box-basic.html
+++ b/_posts/matplotlib/box/2016-02-08-box-basic.html
@@ -1,5 +1,5 @@
 ---
-name: Basic Box Plot
+name: Basic Box Plot Example
 plot_url: https://plot.ly/~tarzzz/1070
 arrangement: horizontal
 language: matplotlib
