change python image

--- a/_posts/python/line-plots/2015-06-30-lines.html
+++ b/_posts/python/line-plots/2015-06-30-lines.html
@@ -3,7 +3,7 @@ permalink: python/line-charts
 description: How to make line charts in Python with Plotly. Examples on creating and styling line charts in Python with Plotly.
 title: Python Line Charts | plotly
 has_thumbnail: true
-thumbnail: thumbnail/line-plots.jpg
+thumbnail: thumbnail/line-plot.jpg
 layout: user-guide
 name: Line Charts
 language: python
@@ -176,7 +176,7 @@ order: 2
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This example styles the color and dash of the traces, adds trace names, 
+<p>This example styles the color and dash of the traces, adds trace names,
 modifiys line width, and adds plot and axes titles.</p>
 
 </div>
@@ -304,7 +304,7 @@ modifiys line width, and adds plot and axes titles.</p>
 <span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
 
 <span class="n">trace1</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Scatter</span><span class="p">(</span>
-    <span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> 
+    <span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span>
        <span class="mi">6</span><span class="p">,</span> <span class="mi">7</span><span class="p">,</span> <span class="mi">8</span><span class="p">,</span> <span class="mi">9</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span>
        <span class="mi">11</span><span class="p">,</span> <span class="mi">12</span><span class="p">,</span> <span class="mi">13</span><span class="p">,</span> <span class="mi">14</span><span class="p">,</span> <span class="mi">15</span><span class="p">],</span>
     <span class="n">y</span><span class="o">=</span><span class="p">[</span><span class="mi">10</span><span class="p">,</span> <span class="mi">20</span><span class="p">,</span> <span class="bp">None</span><span class="p">,</span> <span class="mi">15</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span>
