--- a/_posts/matplotlib/labels/2015-04-15-mpl-setting-title.html
+++ b/_posts/matplotlib/labels/2015-04-15-mpl-setting-title.html
@@ -1,5 +1,5 @@
 ---
-name: Setting Title Properties Font Size and Font Family
+name: Setting Title Font Size and Font Family
 plot_url: https://plot.ly/~tarzzz/1230
 arrangement: horizontal
 language: matplotlib
