updated the link

--- a/_posts/plotly_js/config-options/2015-09-24-config_options_index.html
+++ b/_posts/plotly_js/config-options/2015-09-24-config_options_index.html
@@ -15,7 +15,7 @@ It's the last argument in <code>Plotly.plot</code> and <code>Plotly.newPlot</cod
 <br>
 
 View the full list of configuration options in the
-<a href="https://github.com/plotly/plotly.js/blob/master/src/plot_api/plot_config.js" target="_blank">
+<a href="https://github.com/plotly/plotly.js/blob/master/src/plot_api/plot_config.js#L22-L86" target="_blank">
 plotly.js source code on GitHub
 </a>.
 
