Added some 'Inspired By' Links

--- a/_posts/matplotlib/annotations/2015-04-09-mpl-simple-annotation.html
+++ b/_posts/matplotlib/annotations/2015-04-09-mpl-simple-annotation.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: annotations
 order: 1
 sitemap: false
+description: Inspired by <a href="http://jakevdp.github.io/mpl_tutorial/tutorial_pages/tut4.html">Matplotlib Docs</a>
 ---
 import matplotlib.pyplot as plt
 import numpy as np
