--- a/_posts/matplotlib/annotations/2016-02-08-annotate-arrow.html
+++ b/_posts/matplotlib/annotations/2016-02-08-annotate-arrow.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: annotations
 order: 2
 sitemap: false
+description: Inspired by <a href="http://matplotlib.org/users/annotations_intro.html#annotating-text">Matplotlib Docs</a>
 ---
 import matplotlib.pyplot as plt
 import numpy as np
