--- a/_posts/matplotlib/axes/2016-02-08-axes-equal.html
+++ b/_posts/matplotlib/axes/2016-02-08-axes-equal.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: axes
 order: 4
 sitemap: false
+description: Inspired by <a href="http://matplotlib.org/examples/pylab_examples/axis_equal_demo.html">Matplotlib Docs</a>
 ---
 
 import matplotlib.pyplot as plt
