--- a/_posts/matplotlib/axes/2016-02-08-axes-latex.html
+++ b/_posts/matplotlib/axes/2016-02-08-axes-latex.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: axes
 order: 5
 sitemap: false
+description: Inspired by <a href="http://stackoverflow.com/questions/6774086/why-is-my-xlabel-cut-off-in-my-matplotlib-plot">Stack Overflow</a>
 ---
 
 import matplotlib.pyplot as plt
