--- a/_posts/matplotlib/axes/2016-02-15-setting-axes-limits.html
+++ b/_posts/matplotlib/axes/2016-02-15-setting-axes-limits.html
@@ -3,9 +3,10 @@ name: Setting Axes Limits
 plot_url: https://plot.ly/~tarzzz/1310
 arrangement: horizontal
 language: matplotlib
-suite: labels
+suite: axes
 order: 3
 sitemap: false
+description: Inspired by <a href="http://jakevdp.github.io/mpl_tutorial/tutorial_pages/tut1.html">matplotlib tutorials</a>
 ---
 import matplotlib.pyplot as plt
 import numpy as np
