--- a/_posts/matplotlib/error-bar/2016-02-08-error-bar-basic.html
+++ b/_posts/matplotlib/error-bar/2016-02-08-error-bar-basic.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: error-bar
 order: 1
 sitemap: false
+description: Inspired by <a href="http://matplotlib.org/1.2.1/examples/pylab_examples/errorbar_demo.html">Matplotlib Docs</a>
 ---
 
 import matplotlib.pyplot as plt
