--- a/_posts/matplotlib/axes/2016-02-08-axes-color.html
+++ b/_posts/matplotlib/axes/2016-02-08-axes-color.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: axes
 order: 3
 sitemap: false
+description: Inspired by <a href="http://stackoverflow.com/questions/4761623/changing-the-color-of-the-axis-ticks-and-labels-for-a-plot-in-matplotlib">Stack Overflow</a>
 ---
 
 import matplotlib.pyplot as plt
