--- a/_posts/matplotlib/bar/2016-02-08-bar-stacked.html
+++ b/_posts/matplotlib/bar/2016-02-08-bar-stacked.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: bar
 order: 4
 sitemap: false
+description: Inspired by <a href="http://matplotlib.org/examples/pylab_examples/bar_stacked.html">Matplotlib Docs</a>
 ---
 import matplotlib.pyplot as plt
 import numpy as np
