--- a/_posts/2015-09-06-python-reference.html
+++ b/_posts/2015-09-06-python-reference.html
@@ -54,7 +54,7 @@ layout = go.Layout(             # all "layout" attributes: <a href="#layout">/py
     ]
 )
 
-figure = Figure(data=data, layout=layout)
+figure = go.Figure(data=data, layout=layout)
 
 py.plot(figure, filename='api-docs/reference-graph')</pre>
     </p>
