--- a/_posts/matplotlib/axes/2016-02-08-axes-equal.html
+++ b/_posts/matplotlib/axes/2016-02-08-axes-equal.html
@@ -14,7 +14,7 @@ import numpy as np
 
 import plotly.plotly as py
 import plotly.tools as tls
-# Learn about API authenti
+# Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
 # Plot circle or radius 3
