--- a/_posts/matplotlib/annotations/2015-04-09-mpl-simple-annotation.html
+++ b/_posts/matplotlib/annotations/2015-04-09-mpl-simple-annotation.html
@@ -12,6 +12,7 @@ import matplotlib.pyplot as plt
 import numpy as np
 
 import plotly.plotly as py
+import plotly.tools as tls
 # Learn about API authentication here: https://plot.ly/python/getting-started
 # Find your api_key here: https://plot.ly/settings/api
 
@@ -21,7 +22,7 @@ t = np.arange(0.0, 5.0, 0.01)
 s = np.cos(2*np.pi*t)
 line, = plt.plot(t, s, lw=2)
 
-plt.annotate('local max', xy=(2, 1), xytext=(3, 1.5),
+plt.annotate('local max', xy=(2, 1), xytext=(2.9, 1.1),
              arrowprops=dict(facecolor='black', shrink=0.05))
 
 plt.ylim(-2,2)
