--- a/_posts/matplotlib/axes/2016-02-08-axes-font.html
+++ b/_posts/matplotlib/axes/2016-02-08-axes-font.html
@@ -24,8 +24,8 @@ s = np.sin(4 * np.pi * np.absolute(t)) * np.exp(-5 * np.absolute(t))
 line, = ax.plot(t, s, lw=2)
 
 ax.set_title("My Plot Title")
-ax.set_xlabel("This is X Axis label, with fontsize=16", fontsize=18)
-ax.set_ylabel("This is Y Axis, with fontsize=16", fontsize=16)
+ax.set_xlabel("This is X Axis label with fontsize=16", fontsize=18)
+ax.set_ylabel("This is Y Axis with fontsize=16", fontsize=16)
 
 plotly_fig = tls.mpl_to_plotly( mpl_fig )
 
