More examples, added `Inspired from` links

--- a/_posts/matplotlib/lines-and-markers/2016-02-08-line-style-cycle.html
+++ b/_posts/matplotlib/lines-and-markers/2016-02-08-line-style-cycle.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: lines_and_markers
 order: 3
 sitemap: false
+description: Inspired from <a href="http://stackoverflow.com/questions/7799156/can-i-cycle-through-line-styles-in-matplotlib">Stack Overflow</a>
 ---
 
 import matplotlib.pyplot as plt
