--- a/_posts/matplotlib/lines-and-markers/2016-02-08-line-styles-per-column.html
+++ b/_posts/matplotlib/lines-and-markers/2016-02-08-line-styles-per-column.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: lines_and_markers
 order: 3
 sitemap: false
+description: Inspired from <a href="http://pandas.pydata.org/pandas-docs/version/0.17.1/generated/pandas.Series.plot.html">Pandas Docs</a>
 ---
 
 import matplotlib.pyplot as plt
