--- a/_posts/matplotlib/lines-and-markers/2016-02-08-line-styles.html
+++ b/_posts/matplotlib/lines-and-markers/2016-02-08-line-styles.html
@@ -1,5 +1,5 @@
 ---
-name: Different Line Styles available in Matplotlib
+name: Passing Line Styles as a List
 plot_url: https://plot.ly/~tarzzz/1210
 arrangement: horizontal
 language: matplotlib
