--- a/_posts/matplotlib/scatter_exclusive/2016-02-12-mpl-scatter-legend.html
+++ b/_posts/matplotlib/scatter_exclusive/2016-02-12-mpl-scatter-legend.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: scatter_exclusive
 order: 6
 sitemap: false
+description: Inspired from <a href="http://stackoverflow.com/questions/17411940/matplotlib-scatter-plot-legend">Stack Overflow</a>
 ---
 
 
