--- a/_posts/matplotlib/lines-and-markers/2016-02-08-markers-size.html
+++ b/_posts/matplotlib/lines-and-markers/2016-02-08-markers-size.html
@@ -6,6 +6,7 @@ language: matplotlib
 suite: lines_and_markers
 order: 4
 sitemap: false
+description: Inspired from <a href="http://stackoverflow.com/questions/14827650/pyplot-scatter-plot-marker-size">Stack Overflow</a>
 ---
 
 import matplotlib.pyplot as plt
